# edb-debugger

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  BUGS  CHANGELOG  CMakeLists.txt  README  README.md  README.plugins  README.plugins.md  appveyor.yml  common.pri  create-deb-qt4.sh  create-deb-qt5.sh  create-deb.sh  cspell.config.yaml  debugger.pro  edb.1  edb.appdata.xml  edb.desktop  travis.yml  travis_install_capstone.sh
libELF/: CMakeLists.txt
plugins/: CMakeLists.txt  plugins-x86.pri  plugins-x86_64.pri  plugins.pri  plugins.pro
plugins/Analyzer/: Analyzer.cpp  Analyzer.h  Analyzer.pro  AnalyzerOptionsPage.cpp  AnalyzerOptionsPage.h  AnalyzerWidget.cpp  AnalyzerWidget.h  CMakeLists.txt  DialogSpecifiedFunctions.cpp  DialogSpecifiedFunctions.h  DialogXRefs.cpp  DialogXRefs.h  DialogXRefs.ui  OptionsPage.cpp  OptionsPage.h  OptionsPage.ui  SpecifiedFunctions.cpp  SpecifiedFunctions.h  SpecifiedFunctions.ui
plugins/Assembler/: Assembler.cpp  Assembler.h  Assembler.pro  Assembler.qrc  AssemblerOptionsPage.cpp  AssemblerOptionsPage.h  CMakeLists.txt  DialogAssembler.cpp  DialogAssembler.h  DialogAssembler.ui  OptionsPage.cpp  OptionsPage.h  OptionsPage.ui  dialog_assembler.ui
plugins/Backtrace/: Backtrace.cpp  Backtrace.h  Backtrace.pro  CMakeLists.txt  CallStack.cpp  CallStack.h  DialogBacktrace.cpp  DialogBacktrace.h  DialogBacktrace.ui  backtrace_global.h
plugins/BinaryInfo/: BinaryInfo.cpp  BinaryInfo.h  BinaryInfo.pro  CMakeLists.txt  DialogHeader.cpp  DialogHeader.h  DialogHeader.ui  DialogRegions.cpp  DialogRegions.h  DialogRegions.ui  ELF32.cpp  ELF32.h  ELF64.cpp  ELF64.h  ELFXX.cpp  ELFXX.h  OptionsPage.cpp  OptionsPage.h  OptionsPage.ui  PE32.cpp  PE32.h  demangle.h  dialogheader.ui  elf_binary.h  pe_binary.h  symbols.cpp  symbols.h
plugins/BinarySearcher/: BinarySearcher.cpp  BinarySearcher.h  BinarySearcher.pro  CMakeLists.txt  DialogASCIIString.cpp  DialogASCIIString.h  DialogASCIIString.ui  DialogAsciiString.cpp  DialogAsciiString.h  DialogAsciiString.ui  DialogBinaryString.cpp  DialogBinaryString.h  DialogBinaryString.ui  DialogResults.cpp  DialogResults.h  DialogResults.ui
plugins/Bookmarks/: BookmarkWidget.cpp  BookmarkWidget.h  BookmarkWidget.ui  Bookmarks.cpp  Bookmarks.h  Bookmarks.ui  BookmarksModel.cpp  BookmarksModel.h  CMakeLists.txt
plugins/BreakpointManager/: BreakpointManager.cpp  BreakpointManager.h  CMakeLists.txt  DialogBreakpoints.cpp  DialogBreakpoints.h  DialogBreakpoints.ui
plugins/CheckVersion/: CMakeLists.txt  CheckVersion.cpp  CheckVersion.h  CheckVersionOptionsPage.cpp  CheckVersionOptionsPage.h  OptionsPage.cpp  OptionsPage.h  OptionsPage.ui
plugins/CommentsViewer/: CMakeLists.txt  CommentsViewer.cpp  CommentsViewer.h  DialogCommentsViewer.cpp  DialogCommentsViewer.h  DialogCommentsViewer.ui
plugins/DebuggerCore/: Breakpoint.cpp  Breakpoint.h  CMakeLists.txt  DebuggerCore.pro  DebuggerCoreBase.cpp  DebuggerCoreBase.h  RegisterViewDelegate.cpp  X86Breakpoint.cpp  X86Breakpoint.h
plugins/DebuggerErrorConsole/: CMakeLists.txt  Plugin.cpp  Plugin.h
plugins/DumpState/: CMakeLists.txt  DumpState.cpp  DumpState.h  DumpStateOptionsPage.cpp  DumpStateOptionsPage.h  OptionsPage.cpp  OptionsPage.h  OptionsPage.ui
plugins/ELFBinaryInfo/: ELF32.cpp  ELF32.h  ELF64.cpp  ELF64.h  ELFBinaryInfo.cpp
plugins/Environment/: DialogEnvironment.cpp  Environment.h
plugins/FasLoader/: .gitignore  CMakeLists.txt  FasCore.cpp  FasCore.hpp  FasLoader.cpp  FasLoader.hpp  Header.hpp  OptionsPage.cpp  OptionsPage.hpp  OptionsPage.ui  Symbol.hpp
plugins/FunctionDB/: FunctionDB.pro
plugins/FunctionFinder/: CMakeLists.txt  DialogFunctions.cpp  DialogFunctions.h  DialogFunctions.ui  DialogResults.cpp  DialogResults.h  DialogResults.ui  FunctionFinder.cpp  FunctionFinder.h  ResultsModel.cpp  ResultsModel.h
plugins/HardwareBreakpoints/: CMakeLists.txt  DialogHWBreakpoints.cpp  DialogHWBreakpoints.h  DialogHWBreakpoints.ui  DialogHwBreakpoints.cpp  DialogHwBreakpoints.h  DialogHwBreakpoints.ui  HardwareBreakpoints.cpp  HardwareBreakpoints.h  HardwareBreakpoints.pro  libHardwareBreakpoints.cpp  libHardwareBreakpoints.h
plugins/HeapAnalyzer/: CMakeLists.txt  DialogHeap.cpp  DialogHeap.h  DialogHeap.ui  HeapAnalyzer.cpp  HeapAnalyzer.h  HeapAnalyzer.pro  ResultViewModel.cpp  ResultViewModel.h
plugins/InstructionInspector/: CMakeLists.txt  Plugin.cpp  Plugin.h
plugins/ODbgRegisterView/: BitFieldDescription.cpp  BitFieldDescription.h  BitFieldFormatter.cpp  BitFieldFormatter.h  CMakeLists.txt  Canvas.cpp  Canvas.h  DialogEditFPU.cpp  DialogEditFPU.h  DialogEditGPR.cpp  DialogEditGPR.h  DialogEditSIMDRegister.cpp  DialogEditSIMDRegister.h  DialogEditSimdRegister.cpp  DialogEditSimdRegister.h  EntryGridKeyUpDownEventFilter.cpp  EntryGridKeyUpDownEventFilter.h  FPUValueField.h  FieldWidget.cpp  FieldWidget.h  Float80Edit.cpp  Float80Edit.h  FpuValueField.h  GPREdit.cpp  GPREdit.h  GprEdit.cpp  GprEdit.h  MultiBitFieldWidget.cpp  MultiBitFieldWidget.h  NumberEdit.cpp  NumberEdit.h  ODbgRV_Common.h  ODbgRV_Util.h  ODbgRV_x86Common.h  ODbgRegisterView.pro  Plugin.cpp  Plugin.h  RegisterGroup.cpp  RegisterGroup.h  RegisterView.cpp  (+14 more)
plugins/OpcodeSearcher/: CMakeLists.txt  DialogOpcodes.cpp  DialogOpcodes.h  DialogOpcodes.ui  DialogResults.cpp  DialogResults.h  DialogResults.ui  OpcodeSearcher.cpp  OpcodeSearcher.h  (+2 more)
src/: Address.cpp  ArchProcessor.h  BasicBlock.cpp  BinaryString.cpp  BinaryString.ui  ByteArray.cpp  ByteShiftArray.cpp  CMakeLists.txt  CallStack.cpp  CommentServer.cpp  CommentServer.h  Configuration.cpp  DataViewInfo.cpp  DataViewInfo.h  DebugEvent.cpp  DebugEventHandlers.cpp  DebugEventHandlers.h  Debugger.cpp  Debugger.h  Debugger.ui  DebuggerInternal.h  DebuggerMain.cpp  DebuggerMain.h  DebuggerOps.h  DebuggerUI.cpp  DebuggerUI.h  DialogAbout.cpp  DialogAbout.h  DialogAbout.ui  DialogArguments.cpp  DialogArguments.h  DialogArguments.ui  DialogAttach.cpp  DialogAttach.h  DialogAttach.ui  DialogBreakpoints.cpp  DialogBreakpoints.h  DialogBreakpoints.ui  DialogInputBinaryString.cpp  DialogInputBinaryString.h  (+60 more)
(+953 files in other folders)
